common/tests/badSyntax/floatComparator.output
floatComparator.tyco:10.31: 
Floats no longer supported
floatComparator.tyco:10.34: 
Syntax error at ]
floatComparator.tyco:13.10: 
Floats no longer supported
floatComparator.tyco:13.16: 
Syntax error at ,
floatComparator.tyco:13.19: 
Floats no longer supported
5 errors
